provarAnt/00D190000000ZY2EAM/objects/Markets__c.object
<CustomObject>
    <fields>
        <fullName>New_Factor__c</fullName>
        <label>New Factor</label>
        <precision>10</precision>
        <scale>9</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Used_Factor__c</fullName>
        <label>Used Factor</label>
        <precision>10</precision>
        <scale>9</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ZIP__c</fullName>
        <label>Zip</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <label>Markets</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Markets Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Markets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>